time is now shown correctly in live field status shifts

--- a/client/components/linesBusesStyle.css
+++ b/client/components/linesBusesStyle.css
@@ -180,11 +180,20 @@ table.liveFieldStatusTable td {
 }
 
 .liveFieldStatusTableContainer {
-  height: 350px;
+  height: 500px;
   overflow: scroll;
   border: 1px solid black;
   border-radius: .25rem;
   max-width: 65vw;
+}
+
+.liveFieldStatusCurrentDateAndTime {
+  font-size: 12px;
+}
+
+.liveFieldStatusCurrentDay {
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .liveFieldStatusSessionName {
